--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 FEB 2000</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>FEBRUARY 2000</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.dineshtecht.in</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 93983 57180</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Vijayawada, India</span></li>
