--- a/error.html
+++ b/error.html
@@ -19,7 +19,7 @@
             </div>
             <div class="contant_box_404">
               <h3 class="h2">
-                Look like you're lost
+                Hello, Look like you're lost
               </h3>
               <p>the page you are looking for not avaible!</p>
               <a href="" class="link_404">Go to Home</a>
